--- a/chatApp/FrontEnd/templates/createNewPass.html
+++ b/chatApp/FrontEnd/templates/createNewPass.html
@@ -1,29 +1,23 @@
 
 
-<!DOCTYPE html>
-<body>
-<head>
-  <link rel="stylesheet" href="../css/register.css">
-</head>
-<body>
+
   <form> 
-   <div class=createNew >
+   <div class=createNew>
         <h1>Create New Password</h1>
 
 <div>
         <label><b>Reset Password</b></label><br>
-        <input type="text" placeholder="Reset Password"><br><br>
+        <input type="text" placeholder="Reset Password" ng-model="Password"><br><br>
         </div>
 
         <div>
         <label><b>Conform Password</b></label><br>
-        <input type="text"  placeholder="Conform Password"><br><br>
+        <input type="text"  placeholder="Conform Password" ng-model="Password"><br><br>
         </div> 
 
         <div>
-        <button type="submit">Done</button>&nbsp;&nbsp;
-        <button type="submit">Cancel</button>
+        <button type="submit" ng-click='newpassword()'>Done</button>&nbsp;&nbsp;
+        <button type="submit" ng-click='newpassword()'>Cancel</button>
         </div> 
     </div>
 </form>
- <body>
