--- a/chatApp/FrontEnd/templates/forget.html
+++ b/chatApp/FrontEnd/templates/forget.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<body>
-<head>
-<link rel="stylesheet" href="../css/register.css">
-</head>
-<body>
-  <form> 
-   <div class=forget >
-        <h1>FORGET PASSWORD</h1>
-        <div>
-       <label><b>email-id</b></label><br>
-        <input type="text" placeholder="E-mail" ><br><br>
-         </div>
-        <div>
-   
-         <button type="submit" class=send>send</button>&nbsp;&nbsp;  
-         </div>
-       
-        
+<form>
+  <div class=forget>
+    <h1>FORGET PASSWORD</h1>
+    <div>
+      <label><b>email-id</b></label><br>
+      <input type="text" placeholder="E-mail" ng-model="email"><br><br>
+    </div>
+    <div>
+      <button type="submit" ng-click='forgetPassword()' class="button">forgetPassword</button>
+      <button type="submit" class=send>send</button>&nbsp;&nbsp;
+    </div>
+
   </div>
 </form>
- <body>
