--- a/chatApp/FrontEnd/templates/login.html
+++ b/chatApp/FrontEnd/templates/login.html
@@ -1,26 +1,20 @@
-<!DOCTYPE html>
-<body>
-<head>
-  <link rel="stylesheet" href="../css/register.css">
-</head>
-<body>
+<form>
 
-    <div class="login" >
-  <form> 
-      <h1>LOGIN </h1>
-      <div>
+  <div class="login">
+    <h1>LOGIN </h1>
+    <div>
       <label><b>E-mail-id</b></label>
-      <input type="email"  placeholder="E-mail"><br><br>
-      </div>
+      <input type="email" placeholder="E-mail" ng-model="email"><br><br>
+    </div>
 
-      <div>
-       <label><b>Password</b></label>
-      <input type="password"  placeholder="Password"><br><br>
-      </div>
-     <div>
-  <button type="submit" class=signup>SIGNUP</button>&nbsp;&nbsp;  
-  <a href="forget.html">Forget password</a>
-</div>
+    <div>
+      <label><b>Password</b></label>
+      <input type="password" placeholder="Password" ng-model="password"><br><br>
+    </div>
+    <div>
+      <button type="submit" ui-sref='registration' class=signup>SIGNUP</button>
+
+      <button type="submit" ng-click='login()' class="button">register</button>
+    </div>
   </div>
- </form>
-  <body>
+</form>
