--- a/chatApp/FrontEnd/templates/register.html
+++ b/chatApp/FrontEnd/templates/register.html
@@ -1,49 +1,36 @@
-<!DOCTYPE html>
-<body>
-<head>
-  <link rel="stylesheet" href="../css/register.css">
-</head>
-<body>
-  <form> 
-   <div class=register>
-        <h1>register</h1>
-        <div>
-        <label><b>FirstName</b></label><br>
-        <input type="text" placeholder="FirstName"><br><br>
-        </div>
+<form>
+  <div class=register>
+    <h1>register</h1>
+    <div>
+      <label><b>FirstName</b></label><br>
+      <input type="text" placeholder="FirstName" ng-model="firstName"><br><br>
+    </div>
 
-        <div>
-        <label><b>LastName</b></label><br>
-        <input type="text"  placeholder="LastName"><br><br>
-        </div> 
+    <div>
+      <label><b>LastName</b></label><br>
+      <input type="text" placeholder="LastName" ng-model="lastName"><br><br>
+    </div>
 
-        <div>
-        <label><b>UserName</b></label><br>
-        <input type="text"  placeholder="UserName"><br><br>
-       </div>
-       <div>
-            <label><b>contact</b></label><br>
-            <input type="number"  placeholder="number"><br><br>
-         </div>
-        <div>
-       <label><b>E-mail-id</b></label><br>
-       <input type="text"  placeholder="E-mail"><br><br>
-       </div>
 
-       <div>
-       <label><b>Password</b></label><br>
-       <input type="text"  placeholder="Password"><br><br>
-       </div>
-      
-       <div>
-       <label><b>Confirm Password</b></label><br>
-       <input type="text"  placeholder="Password"><br><br>
+    <div>
+      <label><b>E-mail-id</b></label><br>
+      <input type="text" placeholder="E-mail" ng-model="email"><br><br>
+    </div>
+
+    <div>
+      <label><b>Password</b></label><br>
+      <input type="text" placeholder="Password" ng-model="password"><br><br>
+    </div>
+
+    <div>
+      <label><b>Confirm Password</b></label><br>
+      <input type="text" placeholder="Password" ng-model="password"><br><br>
     </div>
     <div>
-    <button type="button">Register</button>&nbsp;&nbsp;
-    <a href="login.html">Sign in</a>
+      <button type="button" ng-click="registration()">Register</button>&nbsp;&nbsp;
+
+
     </div>
 
   </div>
- </form>
-  <body>
+</form>
