--- a/chatApp/FrontEnd/templates/forget.html
+++ b/chatApp/FrontEnd/templates/forget.html
@@ -3,11 +3,11 @@
     <h1>FORGET PASSWORD</h1>
     <div>
       <label><b>email-id</b></label><br>
-      <input type="text" placeholder="E-mail" ng-model="email"><br><br>
+      <input type="email" placeholder="E-mail" ng-model="email"><br><br>
     </div>
     <div>
-      <button type="submit" ng-click='forgetPassword()' class="button">forgetPassword</button>
-      <button type="submit" class=send>send</button>&nbsp;&nbsp;
+     
+      <button type="submit" ng-click='forgetPassword()' class="button">send</button>
     </div>
 
   </div>
