--- a/chatApp/FrontEnd/templates/login.html
+++ b/chatApp/FrontEnd/templates/login.html
@@ -12,9 +12,9 @@
       <input type="password" placeholder="Password" ng-model="password"><br><br>
     </div>
     <div>
-      <button type="submit" ui-sref='registration' class=signup>SIGNUP</button>
-
-      <button type="submit" ng-click='login()' class="button">register</button>
+      <button type="submit" ui-sref='registration' class=signup>register</button>
+      <button type="submit" ui-sref='forgetPassword()' class="button">forget password</button>
+      <button type="submit" ng-click='login()' class="button">LOGIN</button>
     </div>
   </div>
 </form>
