--- a/chatApp/FrontEnd/templates/register.html
+++ b/chatApp/FrontEnd/templates/register.html
@@ -27,7 +27,7 @@
       <input type="text" placeholder="Password" ng-model="password"><br><br>
     </div>
     <div>
-      <button type="button" ng-click="registration()">Register</button>&nbsp;&nbsp;
+      <button type="button" ng-click="registration()">Register</button>
 
 
     </div>
