--- a/chatApp/FrontEnd/templates/register.html
+++ b/chatApp/FrontEnd/templates/register.html
@@ -28,7 +28,7 @@
     </div>
     <div>
       <button type="button" ng-click="registration()">Register</button>
-
+      <button type="submit" ui-sref='login()' class="button">Login</button>
 
     </div>
 
