--- a/chatApp/FrontEnd/templates/dashboard.html
+++ b/chatApp/FrontEnd/templates/dashboard.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html>
-<body>
+<!DOCTYPE html> 
+<html> 
+<head> 
+    <title>Page Layout</title> 
+     
+</head> 
+  
+<body> 
+      
+    <!-- Header Section -->
+    <header> 
+        <div class="head1">welcome to the chat App</div> 
+    </header> 
+      
+    <!-- Menu Navigation Bar -->
+     
+           <div class="menu"> 
+            <a href="#logout ">LOGOUT</a>
+            </div> 
+       
+      
+            <div class="column1" >
+          <h2>ALL USERS LIST</h2>
+          <div  ng-repeat="x in getUserData">
+           <ul><button>{{x.firstName}}</button></ul> 
+            </div>
+        </div>
 
-<h1>WELCOME TO THE CHATAPP</h1>
+           <div class="column2">
+           <h2>COMMUNICATIONS</h2>
+           </div>
+      
 
-<p>HELLO</p>
-
-</body>
-</html>
+</body> 
+</html>             
