--- a/chatApp/FrontEnd/templates/register.html
+++ b/chatApp/FrontEnd/templates/register.html
@@ -19,13 +19,9 @@
 
     <div>
       <label><b>Password</b></label><br>
-      <input type="text" placeholder="Password" ng-model="password"><br><br>
+      <input type="password" placeholder="Password" ng-model="password"><br><br>
     </div>
 
-    <div>
-      <label><b>Confirm Password</b></label><br>
-      <input type="text" placeholder="Password" ng-model="password"><br><br>
-    </div>
     <div>
       <button type="button" ng-click="registration()">Register</button>
       <button type="submit" ui-sref='login()' class="button">Login</button>
