--- a/chatApp/FrontEnd/templates/register.html
+++ b/chatApp/FrontEnd/templates/register.html
@@ -14,7 +14,7 @@
 
     <div>
       <label><b>E-mail-id</b></label><br>
-      <input type="text" placeholder="E-mail" ng-model="email"><br><br>
+      <input type="email" placeholder="E-mail" ng-model="email"><br><br>
     </div>
 
     <div>
@@ -23,7 +23,7 @@
     </div>
 
     <div>
-      <button type="button" ng-click="registration()">Register</button>
+      <button type="button" ng-click="registration()" class="button">Register</button><br>
       <button type="submit" ui-sref='login()' class="button">Login</button>
 
     </div>
