--- a/chatApp/FrontEnd/templates/forget.html
+++ b/chatApp/FrontEnd/templates/forget.html
@@ -7,7 +7,7 @@
     </div>
     <div>
      
-      <button type="submit" ng-click='forgetPassword()' class="button">send</button>
+      <button type="submit" ng-click='forgetPassword()' class="send">send</button>
     </div>
 
   </div>
