--- a/chatApp/FrontEnd/templates/login.html
+++ b/chatApp/FrontEnd/templates/login.html
@@ -16,8 +16,8 @@
       <input type="password" placeholder="Password" ng-model="password" ><br><br>
     </div>
     <div>
-      <button type="submit" ui-sref='registration' class=signup>register</button>
-      <button type="submit" ui-sref='forgetPassword()' class="button">forget password</button>
+      <button type="submit" ui-sref='registration' class=button>register</button><br><br>
+      <button type="submit" ui-sref='forgetPassword()' class="button">forget password</button><br><br>
       <button type="submit" ng-click='login()' class="button">LOGIN</button>
      
     </div>
