--- a/chatApp/FrontEnd/css/register.css
+++ b/chatApp/FrontEnd/css/register.css
@@ -1,16 +1,12 @@
 body {
-  background-image: url('../asserts/bg2.jpg');
-    text-align: center;    
-          margin: 0 auto; 
+  background-image: url('../assets/body2.jpg');
+          text-align: center;    
           background-position:center; 
-          background-size: contain 
-     
-    
+      
   }
   
   
-  .head1 {
-    
+  .head1 { 
           font-size:40px; 
           color:blue; 
           font-weight:bold
@@ -26,27 +22,25 @@ body {
   
       padding: 16px;
       width: 25%;
-      height: 80%;
+      height: auto;
       background-color:lightgray;
       position: absolute;
       left: 35%
       }
 
 .login{
-  background-image: url('../asserts/login.jpg');
+  background-color:lightgreen;
     padding: 16px;
     width: 25%;
-    height: 60%;
-    background-color:rgb(189, 207, 214);
+    height: auto;
     position: absolute;
     left: 35%
-    
     }
    .forget{
   
       padding: 16px;
       width: 25%;
-      height: 50%;
+      height: 45%;
       background-color:skyblue;
       position: absolute;
       left: 35%
@@ -56,7 +50,7 @@ body {
   
         padding: 16px;
         width: 25%;
-        height: 50%;
+        height: auto;
         background-color:lightskyblue;
         position: absolute;
         left: 35%
@@ -108,8 +102,7 @@ height: 400px;
 
 
 .column2{
-  background-image: url('../asserts/messagess.jpg');
-  background-repeat: no-repeat;
+ background-color: royalblue;
   background-size: cover;
   height: 350px;
   width: 810px;
@@ -117,7 +110,6 @@ height: 400px;
   left: 30%;
   top: 20%;
   overflow: auto;
-  background-color:grey;
   padding :10px 15px 10px 10px;
   border-radius: 30px;
 }
@@ -139,7 +131,7 @@ height: 400px;
 .textMessage{
   position: absolute;
   left: 30%;
-  top: 73%;
+  top: 75%;
   width: 60%;
   padding: 12px 15px;
   margin: 8px 0;
@@ -152,19 +144,35 @@ height: 400px;
   font-size: 20px;
   color:black;
   right: 25%;
-  top: 73%;
+  top: 75%;
  padding: 10px 5px;
  background-color:green
 }
 
 .sendText{
-  position: fixed;
-  right: 10%;
-  color:black
+ 
+  border: 1px solid black;
+  background-color:gainsboro;
+position: absolute;
+right:10%;
+-webkit-border-radius: 10px;
+-moz-border-radius: 12px;
+-ms-border-radius: 12px;
+-o-border-radius: 6px;
+border-radius: 3px;
+padding: 10px 10px 10px 10px;
 }
 
 .receiveText{
-  position: fixed;
-  left: 30%;
-  color:black
+  
+  border: 1px solid black;
+background-color:rgb(147, 152, 158);
+position: absolute;
+left:10%;
+-webkit-border-radius: 10px;
+-moz-border-radius: 12px;
+-ms-border-radius: 12px;
+-o-border-radius: 6px;
+border-radius: 3px;
+padding: 10px 10px 10px 10px;
 }
