--- a/chatApp/FrontEnd/templates/login.html
+++ b/chatApp/FrontEnd/templates/login.html
@@ -18,9 +18,10 @@
     
 
     <div>
+        <button type="submit" ng-click='login()' class="button">LOGIN</button><br><br>
       <button type="submit" ui-sref='registration' class=button>register</button><br><br>
-      <button type="submit" ui-sref='forgetPassword()' class="button">forget password</button><br><br>
-      <button type="submit" ng-click='login()' class="button">LOGIN</button>
+      <a ui-sref='forgetPassword()' style='color:blue' class=frgt>forget password?</a><br><br>
+      
     
     </div>
   </div>
