--- a/chatApp/FrontEnd/css/register.css
+++ b/chatApp/FrontEnd/css/register.css
@@ -11,11 +11,12 @@ body {
           color:rgb(100, 16, 16); 
           font-weight:bold
      }
-  input[type=email], input[type=password] {
+  input[type=text], input[type=password] {
     width: 60%;
+    height: 10%;
     padding: 2px;
-    margin: 10px
-      
+    margin: 10px;
+  
     }
 	
     .register{
@@ -25,7 +26,13 @@ body {
       height: auto;
       background-color:lightgray;
       position: absolute;
-      left: 35%
+      left: 35%;
+
+  box-sizing: content-box;  
+  width: 300px;
+  height: auto;
+  padding: 30px;  
+  border: 10px solid black;
       }
 
 .login{
@@ -35,16 +42,33 @@ body {
     width: 25%;
     height: auto;
     position: absolute;
-    left: 35%
+    left: 35%;
+
+  box-sizing: content-box;  
+  width: 300px;
+  height: auto;
+  padding: 30px;  
+  border: 10px solid black;
     }
+
    .forget{
     background-image: url('../assets/login2.jpg');
       padding: 16px;
       width: 25%;
       height: auto;
       position: absolute;
-      left: 35%
-      
+      left: 35%;
+     
+  box-sizing: content-box;  
+  width: 300px;
+  height: auto;
+  padding: 30px;  
+  border: 10px solid black;
+
+      }
+      .frgt{
+        position: absolute;
+        left: 35%;
       }
       .createNew{
         
@@ -52,9 +76,19 @@ body {
         padding: 16px;
         width: 25%;
         height: auto;
-      
         position: absolute;
-        left: 35%
+        left: 35%;
+
+  box-sizing: content-box;  
+  width: 300px;
+  height: auto;
+  padding: 30px;  
+  border: 10px solid black;
+        }
+
+    .frgt{
+          position:absolute;
+          left: 35%;
         }
 
         .signup{
@@ -63,15 +97,11 @@ body {
           background-color:rgb(18, 168, 18);
         }
         
-		
         .send{
-          width: 40%;
-          height: 50%;
+          width: 30%;
+          height: 60%;
           background-color:green;
-        }
-
-       
-      
+        }    
 
   .logout{
   position: absolute;
@@ -131,8 +161,8 @@ body {
 .textMessage{
   position: absolute;
   left: 30%;
-  top: 77%;
-  width: 60%;
+  top: 75%;
+  width: 45%;
   padding: 12px 15px;
   margin:8px 0;
 }  
