--- a/chatApp/FrontEnd/templates/dashboard.html
+++ b/chatApp/FrontEnd/templates/dashboard.html
@@ -4,7 +4,7 @@
              <div class="head1">welcome to the chat App</div> 
              <h1>user: {{loginName}}</h1>
                  <div class="logout"> 
-                 <a href="#logout "ui-sref="login">LOGOUT</a>
+                 <button ng-click="logout()" ui-sref="login" >LOGOUT</button>
                  </div> 
             
   
